--- a/public_html/static/css/main.css
+++ b/public_html/static/css/main.css
@@ -1,27 +1,98 @@
-html, body {
-  height: 100%;
-  margin: 0;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+:root {
+  font-size: 16px;
+  font-family: 'Open Sans';
+
+  --text-primary: #000000;
+  --text-secondary: #333333;
+  --bg-primary: #f3f3f3;
+  --bg-secondary: #ffffff;
+
+  --scrollbar-width: 0.25rem;
+  --scrollbar-track: #c6c6c6;
+  --scrollbar-track-border-radius: 4px;
+  --scrollbar-thumb: rgb(131, 131, 131);
+  --scrollbar-thumb-border-radius: 4px;
+
+  /* --footer-background-color: #ebebeb; */
+  --footer-border-top-color: #cacaca;
+
+  /* main */
+  --main-margin-top: 0rem;
+  --main-padding: 3.5rem;
+  /* nav */
+  --menubar-height: 4rem;
+  --sidebar-wide: 5rem;
+  --sidebar-height: 4rem;
+  /* button tooltip */
+  --tooltip-background-color: #e7e7e7;
+  --tooltip-text-color: #333;
 }
+* {
+  box-sizing: border-box;
+}
+
 
 body {
-  display: flex;
-  flex-direction: column;
-  font-family: Arial, sans-serif;
-  text-align: center;
-  background-color: #323232;
-  margin: 0;
+  color: var(--text-primary);
+  background-color: var(--bg-primary);
   padding: 0;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+body.dark-mode {
+  --text-primary: #ececec;
+  --text-secondary: #b6b6b6;
+  --bg-primary: #23232e;
+  --bg-secondary: #141418;
+
+  --scrollbar-track: #49494b;
+  --scrollbar-thumb: rgb(124, 121, 121);
+
+  /* --footer-background-color: #1f1f29; */
+  --footer-border-top-color: #4f4f4f;
+
+  --tooltip-background-color: #333;
+  --tooltip-text-color:#fff;
+}
+body::-webkit-scrollbar {
+  width: var(--scrollbar-width);
+}
+body::-webkit-scrollbar-track {
+  background: var(--scrollbar-track);
+  border-radius: var(--scrollbar-track-border-radius);
+}
+body::-webkit-scrollbar-thumb {
+  background: var(--scrollbar-thumb);
+  border-radius: var(--scrollbar-thumb-border-radius);
 }
 
+
+main {
+  padding: var(--main-padding);
+  margin-top: var(--main-margin-top);
+}
+
+
 footer {
+  font-size: 0.8rem;
+  z-index: 1;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #1f1f1f;
-  color: #e2e2e2;
-  text-align: center;
-  padding: 5px;
-  border-top: 2px solid #4a4a4a;
+  padding: 0.5rem;
+  padding-top: 0;
+  background-color: var(--footer-background-color);
+  color: var(--text-secondary);
+  position: relative;
+  bottom: 0;
   width: 100%;
-  box-sizing: border-box;
+  border-top: 0.1rem solid var(--footer-border-top-color);
+}
+footer a {
+  color: var(--text-secondary);
+  text-decoration: none;
+}
+footer a:hover {
+  text-decoration: underline;
 }
