--- a/public_html/static/css/globalComponents.css
+++ b/public_html/static/css/globalComponents.css
@@ -32,7 +32,7 @@ body.dark-mode {
   --sidebar-ul-a-hover-background-color: rgb(43, 43, 43);
 
   --hero-icon-color: rgb(109, 47, 184);
-  --hero-highlight-text-color: rgb(106, 23, 145);
+  --hero-highlight-text-color: rgb(108, 10, 153);
 }
 
 
@@ -318,23 +318,28 @@ body.dark-mode {
   width: 100%;
   height: 100vh;
   margin: 0 auto;
+  overflow: hidden;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .hero-content {
   position: absolute;
-  top: 120px;
-  left: 40%;
+  top: 80px;
+  left: 35%;
   transform: translateX(-50%);
   max-width: min(var(--content-mx-width), 60%);
   display: flex;
   align-items: flex-start;
   gap: 20px;
+  z-index: 1;
 }
 .hero-icon {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 .hero-icon-line-gradient {
   width: 12px;
@@ -349,6 +354,7 @@ body.dark-mode {
 .hero-text h1 {
   font-family: 'Poppins', sans-serif;
   font-size: 3.5rem;
+  color: #e0e0e0;
 }
 .hero-highlight-text {
   font-weight: 800;
@@ -359,5 +365,28 @@ body.dark-mode {
   margin-top: 0px;
   font-family: 'Poppins', sans-serif;
   font-size: 1.5rem;
-  color: var(--text-secondary);
+  color: #b9b9b9;
+}
+.hero-model-canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+@media (max-width: 751px) {
+  .hero-icon-line-gradient {
+    height: 350px;
+  }
+  .hero-text h1 {
+    font-size: 3rem;
+  }
+  .hero-highlight-text {
+    font-size: 3.7rem;
+  }
+  .hero-text p {
+    font-size: 1.4rem;
+  }
 }
