Add Hero Model Controls

--- a/public_html/static/css/home/app.css
+++ b/public_html/static/css/home/app.css
@@ -3,6 +3,9 @@ main {
     margin-bottom: -1rem;
     color: #ececec;
 }
+footer {
+    border-top: 0.1rem solid #6b6b6b;
+}
 footer,
 footer a {
     background-color: #0b0a0a;
