--- a/public_html/static/css/globalComponents.css
+++ b/public_html/static/css/globalComponents.css
@@ -377,6 +377,44 @@ body.dark-mode {
   font-size: 1.5rem;
   color: #b9b9b9;
 }
+.hero-button-wrapper {
+  position: absolute;
+  bottom: 75px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 10px;
+  padding: 4px 15px;
+  border: 3px solid #5a5a5a;
+  border-radius: 30px;
+  background-color: transparent;
+  transition: border-color 0.3s ease;
+  z-index: 1;
+}
+.hero-button-wrapper:hover {
+  border-color: #a8a8a8;
+}
+.hero-animation-control-btn,
+.hero-animation-follow-control-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 35px;
+  height: 35px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+.hero-animation-control-btn i,
+.hero-animation-follow-control-btn i {
+  font-size: 24px;
+  color: #747474;
+  transition: color 0.3s ease;
+}
+.hero-animation-control-btn:hover i,
+.hero-animation-follow-control-btn:hover i {
+  color: #cecece;
+}
 .hero-model-canvas {
   position: absolute;
   top: 0;
@@ -398,5 +436,11 @@ body.dark-mode {
   }
   .hero-text p {
     font-size: 1.4rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .hero-button-wrapper {
+    bottom: 140px;
   }
 }
