--- a/public_html/static/css/globalComponents.css
+++ b/public_html/static/css/globalComponents.css
@@ -4,8 +4,8 @@
 
 :root {
   --menubar-background-color: #582193;
-  --menubar-text-color: #ffffff;
-  --menubar-text-color-hovor: #ffbf65;
+  --menubar-text-color: #d9d9d9;
+  --menubar-text-color-hovor: #fdfd3b;
   --menubar-box-shadow: 0 4px 10px rgba(159, 106, 201, 0.55);
   --menubar-li-cursor: pointer;
   --menubar-dropdown-menu-text-color: #000;
@@ -22,7 +22,7 @@
   
 body.dark-mode {
   --menubar-background-color: #441775;
-  --menubar-text-color-hovor: #fdfd3b;
+  --menubar-text-color-hovor: #ffee00;
   --menubar-box-shadow: 0 4px 10px rgba(88, 76, 98, 0.467);
   --menubar-dropdown-menu-text-color: #fff;
   --menubar-dropdown-menu-hover-background-color: #5f5f5f;
@@ -414,6 +414,37 @@ body.dark-mode {
 .hero-animation-control-btn:hover i,
 .hero-animation-follow-control-btn:hover i {
   color: #cecece;
+  transform: scale(1.15);
+  transition: transform 0.2s ease-in-out;
+}
+.hero-model-progress-bar-wrapper {
+  display: flex;
+  align-items: center;
+  width: 30%;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+.hero-model-progress-bar-container {
+  flex-grow: 1;
+  height: 6px;
+  border-radius: 4px;
+  background-color: #e0e0e0;
+  position: relative;
+  overflow: hidden;
+}
+.hero-model-progress-bar {
+  height: 100%;
+  background-color: #8c00ff;
+  transition: width 0.2s ease-in-out;
+}
+.hero-progress-text {
+  margin-left: 10px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  color: #ffffff;
 }
 .hero-model-canvas {
   position: absolute;
