--- a/public_html/static/css/globalComponents.css
+++ b/public_html/static/css/globalComponents.css
@@ -333,15 +333,21 @@ body.dark-mode {
   background: radial-gradient(circle, rgba(81, 26, 137, 0.1) 1%, transparent 100%);
   backdrop-filter: blur(4px);
 } */
+.hero-content-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-around;
+  margin-top: 2%;
+  gap: 40px;
+  padding: 0 6%;
+}
 .hero-content {
-  position: absolute;
-  top: 80px;
-  left: 35%;
-  transform: translateX(-50%);
-  max-width: min(var(--content-mx-width), 60%);
+  position: relative;
+  max-width: 55%;
+  flex: 1;
   display: flex;
   align-items: flex-start;
-  gap: 20px;
   z-index: 1;
 }
 .hero-icon {
@@ -349,33 +355,90 @@ body.dark-mode {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 40px;
+  margin-top: 50px;
 }
 .hero-icon-line-gradient {
   width: 12px;
-  height: 400px;
+  height: 420px;
   border-radius: 4px;
   background: linear-gradient(180deg, var(--hero-icon-color), transparent);
-  margin-top: -4px;
 }
 .hero-text {
-  margin-left: 0.8rem;
+  margin-left: 1.8rem;
 }
 .hero-text h1 {
   font-family: 'Poppins', sans-serif;
-  font-size: 3.5rem;
+  font-size: 4.5rem;
   color: #e0e0e0;
+  margin-bottom: 10px;
 }
 .hero-highlight-text {
   font-weight: 800;
-  font-size: 4rem;
+  font-size: 4.8rem;
   color: rgb(99, 19, 131);
 }
 .hero-text p {
   margin-top: 0px;
   font-family: 'Poppins', sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   color: #b9b9b9;
+}
+.hero-content-secondary {
+  border-radius: 8px;
+  padding: 60px 10px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+  max-width: 35%;
+  font-family: 'Poppins', sans-serif;
+  flex: 1;
+  z-index: 1;
+}
+.hero-content-secondary h2 {
+  padding-left: 4px;
+  font-size: 1.8rem;
+  font-weight: 1000;
+  text-transform: uppercase;
+  color: #e0e0e0;
+}
+.hero-content-secondary p {
+  padding-left: 8px;
+  font-size: 1.1rem;
+  text-transform: uppercase;
+  color: #c6c3c3;
+}
+.hero-content-secondary button {
+  margin: 4px 6px;
+  padding: 20px 32px;
+  border: 2px solid #ababab;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: rgb(168, 168, 168);
+  border-radius: 2px;
+  font-weight: 750;
+  font-size: 1.05rem;
+  position: relative;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: color 0.4s linear;
+}
+.hero-content-secondary button:hover {
+  color: #ffffff;
+  font-size: 1.1rem
+}
+.hero-content-secondary button::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #5f07ee;
+  transition: transform 0.5s;
+  transform-origin: 0 0;
+  transform: scaleX(0);
+  transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7);
+  z-index: -1;
+}
+.hero-content-secondary button:hover::before {
+  transform: scaleX(1);
 }
 .hero-button-wrapper {
   position: absolute;
@@ -403,6 +466,7 @@ body.dark-mode {
   height: 35px;
   background-color: transparent;
   border: none;
+  outline: none;
   cursor: pointer;
 }
 .hero-animation-control-btn i,
@@ -424,6 +488,7 @@ body.dark-mode {
   position: absolute;
   top: 60%;
   left: 50%;
+  background: transparent;
   transform: translate(-50%, -50%);
   z-index: 1;
 }
@@ -455,18 +520,33 @@ body.dark-mode {
   z-index: 0;
 }
 
+@media (max-width: 1150px) {
+  .hero-content-wrapper {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 8%;
+    gap: 0px;
+  }
+  .hero-content {
+    margin-right: 30%;
+  }
+  .hero-content-secondary {
+    display: none;
+  }
+}
+
 @media (max-width: 900px) {
   .hero-icon-line-gradient {
     height: 350px;
   }
   .hero-text h1 {
-    font-size: 3rem;
+    font-size: 3.6rem;
   }
   .hero-highlight-text {
-    font-size: 3.7rem;
+    font-size: 4rem;
   }
   .hero-text p {
-    font-size: 1.4rem;
+    font-size: 1.5rem;
   }
 }
 
