--- a/public_html/static/css/home/app.css
+++ b/public_html/static/css/home/app.css
@@ -2,6 +2,7 @@
 @import url('../components/menubar.css');
 @import url('../components/sidebar.css');
 @import url('../components/hero.css');
+@import url('../components/tilt-card.css');
 
 main {
     background-color: #070707;
