--- a/public_html/static/css/components/tilt-card.css
+++ b/public_html/static/css/components/tilt-card.css
@@ -1,15 +1,15 @@
 .tilt-card {
-  width: 250px;
-  min-height: 280px;
+  width: min(280px, 80%);
+  min-height: 320px;
   padding: 1px;
   border-radius: 20px;
   display: flex;
   align-items: center;
-  box-shadow: 0px 10px 30px rgba(255, 255, 255, 0.15);
-  background: linear-gradient(45deg, #493378, #42238c);
+  box-shadow: 0px 10px 35px rgba(255, 255, 255, 0.1);
+  background: linear-gradient(45deg, #5228b4, #479fde);
 }
 .tilt-card-content {
-  background-color: rgb(26, 23, 30);
+  background-color: rgb(16, 14, 19);
   border-radius: 20px;
   padding: 30px;
   display: flex;
@@ -20,17 +20,66 @@
   flex-shrink: 0;
   width: 100%;
   height: 100%;
-  min-height: 280px;
+  min-height: 320px;
 }
 .tilt-card-content img {
-  width: 64px;
-  height: 64px;
+  width: 72px;
+  height: 72px;
   object-fit: contain;
   margin-bottom: 20px;
 }
 .tilt-card-content h3 {
   color: #fff;
-  font-size: 20px;
+  margin-bottom: 5px;
+  font-size: 1.25rem;
   font-weight: bold;
   text-align: center;
+}
+.tilt-card-content p {
+  color: #b9b9b9;
+  font-size: 0.9rem;
+}
+
+@media (max-width: 750px) {
+  .tilt-card {
+    width: min(320px, 95%);
+  }
+  .tilt-card-content h3 {
+    font-size: 1.5rem;
+  }
+  .tilt-card-content img {
+    width: 84px;
+    height: 84px;
+  }
+  .tilt-card-content p {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (min-width: 1150px) and (max-width: 1250px) {
+  .tilt-card {
+    width: min(300px, 90%);
+  }
+  .tilt-card-content {
+    padding: 40px;
+  }
+}
+@media screen and (min-width: 1251px) and (max-width: 1400px) {
+  .tilt-card {
+    width: min(210px, 70%);
+  }
+  .tilt-card-content h3 {
+    font-size: 1.1rem;
+  }
+  .tilt-card-content p {
+    font-size: 0.8rem;
+  }
+}
+@media screen and (min-width: 1401px) and (max-width: 1550px) {
+  .tilt-card {
+    width: min(230px, 75%);
+  }
+  .tilt-card-content {
+    padding: 20px;
+  }
 }
