--- a/public_html/static/css/components/menubar.css
+++ b/public_html/static/css/components/menubar.css
@@ -103,7 +103,7 @@ body.dark-mode {
   transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 .menubar-dropdown-menu.open {
-  height: 240px;
+  height: 200px; /* 240px */
 }
 .menubar-dropdown-menu li {
   padding: 0.7rem 1.4rem;
