--- a/public_html/static/css/components/glow-card.css
+++ b/public_html/static/css/components/glow-card.css
@@ -33,9 +33,10 @@
 
 .glow-card-content {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  padding: 20px;
+  gap: 30px;
+  padding: 30px 40px;
   border-radius: 1.75rem;
   background: linear-gradient(90deg, rgb(5, 0, 15) 0%, rgb(8, 1, 19) 100%);
 }
@@ -44,14 +45,53 @@
   height: 100px;
   object-fit: cover;
 }
+.glow-card-info {
+  margin: 0;
+  padding: 0;
+}
 .glow-card-info h3 {
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   color: #ffffff;
-  margin: 10px 0;
+  text-align: start;
+  font-weight: bold;
+  margin: 20px 0;
 }
 .glow-card-info p {
-  color: #dfdfdf;
-  text-align: center;
+  color: #bbbbbb;
+  text-align: start;
+  font-size: 1rem;
+  font-weight: 500;
+}
+.glow-card-info-detail {
+  text-align: right;
+}
+.glow-card-info-detail a {
+  cursor: pointer;
+  text-decoration: none;
+  color: rgb(208, 194, 218);
+  font-size: 0.85rem;
+  font-weight: 400;
+}
+
+@media (max-width: 820px) {
+  .glow-card-content {
+    flex-direction: column;
+    align-items: start;
+    gap: 0px;
+  }
+  .glow-card-icon {
+    width: 80px;
+    height: 80px;
+  }
+  .glow-card-info h3 {
+    font-size: 1.4rem;
+  }
+  .glow-card-info p {
+    font-size: 0.95rem;
+  }
+  .glow-card-info-detail a {
+    font-size: 0.8rem;
+  }
 }
 
 
@@ -115,7 +155,6 @@
   z-index: -1;
   animation: var(--glow-card-animation-cycle) spin4 linear infinite;
 }
-
 
 @keyframes spin1 {
   from {
