--- a/public_html/static/css/home/app.css
+++ b/public_html/static/css/home/app.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap');
 /* https://weiyinghuang.com/static/css */
 @import url('../components/motion-div.css');
+@import url('../components/navigator.css');
 @import url('../components/menubar.css');
 @import url('../components/sidebar.css');
 @import url('../components/hero.css');
